[tool.poetry]
name = "rubric"
version = "0.4.0"
description = "Rubric - Isomorphic Config for Your Python Project ⚙️"
authors = ["rednafi <redowan.nafi@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/rednafi/rubric"
repository = "https://github.com/rednafi/rubric"
keywords = ["python", "configuration", "project", "initialization"]
classifiers = [
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
]
include = ["LICENSE"]

[tool.poetry.dependencies]
python = "^3.7"


[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
mypy = "^0.910"
isort = "^5.9.1"
pytest-asyncio = "^0.15.1"
flake8 = "^3.9.2"
black = "^21.6b0"


# CLI entrypoints
[tool.poetry.scripts]
rubric = "rubric.rubric:cli_entrypoint"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# Linter configuruation.
[tool.isort]
profile = "black"
atomic = true
extend_skip_glob = "migrations,scripts"
line_length = 88


[tool.black]
extend-exclude = "migrations,scripts"


[tool.mypy]
follow_imports = "skip"
ignore_missing_imports = true
warn_no_return = false
warn_unused_ignores = true
allow_untyped_globals = true
allow_redefinition = true
pretty = true
