##########################################
# Build system configs
##########################################

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rubric"
version = "1.0.0"
authors = [
  { name="rednafi", email="redowan.nafi@gmail.com" },
]
description = ">> Linter Config Initialization for Python <<"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.8"
dependencies = [
    "click"
]

classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
dev = [
    "black",
    "ruff",
    "mypy",
    "pre-commit",
    "pip-tools",
    "pytest",
    "hatch",
    "types-setuptools",
    "types-pkg_resources",
]

[project.urls]
"Homepage" = "https://github.com/rednafi/rubric"
"Issue Tracker" = "https://github.com/pypa/rubric/issues"

[project.scripts]
rubric = "rubric:cli"

[tool.hatch.build]
include = [
  "rubric/*",
  "/rubric/*/*",
  "/tests/*",
]

##########################################
# Dev configs
##########################################

[tool.mypy]
follow_imports = "skip"
ignore_missing_imports = true
warn_no_return = false
warn_unused_ignores = true
allow_untyped_globals = true
allow_redefinition = true
pretty = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true


[tool.ruff]
line-length = 88

# Enable Pyflakes `E` and `F` codes by default.
select = ["E", "F", "I001", "PT", "C4"]
ignore = ["E501"]
respect-gitignore = true

per-file-ignores = {}

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.11.
target-version = "py311"


[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10
