[metadata]
name = rubric
version = 0.5.1
description = Rubric - Isomorphic Project Initializer for Python ⚙️
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rednafi/rubric
author = Redowan Delowar
author_email = redowan.nafi@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython

[options]
packages = find:
python_requires = >=3.8.0

[options.packages.find]
exclude =
    tests*

[options.entry_points]
console_scripts =
    rubric = rubric:cli_entrypoint

[options.extras_require]
dev_deps =
    # For linting.
    black
    flake8
    isort
    mypy
    pre-commit

    # For dep management.
    pip-tools

    # For testing.
    pytest
    pytest-asyncio

    # For building & uploading to PyPI.
    twine
    build

    # Types.
    types-setuptools
    types-pkg_resources
